[package]
name = "dancing_links_sudoku"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Generates Sudoku boards using the dancing links algorithm"
readme = "README.md"
repository = "https://github.com/ArmanDris/dancing_links_sudoku"
keywords = ["sudoku", "dancing_links", "algorithm_x", "exact_cover"]
categories = ["algorithms"]

[dependencies]
rand = "0.8"
getrandom = { version = "0.2", optional=true }

[features]
default = []
js-random = ["getrandom/js"]
